<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#9DEB44">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTitulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:cardBackgroundColor="#9873AC"
        >

        <TextView
            android:id="@+id/tituloApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            />

        </androidx.cardview.widget.CardView>
    <!--DATOS PERSONALES-->
    <LinearLayout
        android:id="@+id/datosPersonales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTitulo"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners"
        >

        <TextView
            android:id="@+id/tituloDatosPersonales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo_datos_personales" />

        <!--EDAD-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tituloEdad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/titulo_edad"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">

                <NumberPicker
                    android:id="@+id/edadNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--ESTADO CIVIL-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/tituloEstadoCivil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/titulo_estado_civil" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/desplegableEstadoCivil"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--NÚMERO DE HIJOS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/tituloHijos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_numero_de_hijos"
                android:layout_gravity="center_vertical"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">

                <NumberPicker
                    android:id="@+id/hijosNumberPicker"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--GRADO DE DISCAPACIDAD-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:id="@+id/tituloDiscapacidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/titulo_grado_de_discapacidad" />

            <EditText
                android:id="@+id/inputGradoDiscapacidad"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/hint_discapacidad"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <!--DATOS PROFESIONALES-->
    <LinearLayout
        android:id="@+id/datosProfesionales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datosPersonales"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners">

        <TextView
            android:id="@+id/tituloDatosProfesionales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_datos_profesionales"
            android:layout_gravity="center"/>

        <!--GRUPO PROFESIONAL-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/tituloGrupoProfesional"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titulo_grupo_profesional"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >

                <Spinner
                    android:id="@+id/desplegableGrupoProfesional"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--SALARIO BRUTO ANUAL-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/tituloSalarioBruto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/titulo_salario_bruto_anual"
                />

            <EditText
                android:id="@+id/inputSalarioBruto"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:hint="@string/hint_salario_bruto"
                android:inputType="number"
                />
        </LinearLayout>

        <!--NÚMERO DE PAGAS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:id="@+id/tituloNumeroPagas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/titulo_numero_de_pagas"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp">

                <Spinner
                    android:id="@+id/desplegableNumeroPagas"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/botonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_salario_neto"
        app:layout_constraintTop_toBottomOf="@id/datosProfesionales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#9873AC"
        />
</androidx.constraintlayout.widget.ConstraintLayout>