<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="#9DEB44">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTitulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:cardBackgroundColor="#9873AC"
        >

        <TextView
            android:id="@+id/tituloResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo_resultados"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/salarioBruto"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTitulo"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners"
        >
    <TextView
        android:id="@+id/resultSalarioBruto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/result_salario_bruto"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/salarioNeto"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salarioBruto"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners"
        >
        <TextView
            android:id="@+id/resultSalarioNeto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/result_salario_neto"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/irpf"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salarioNeto"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners"
        >
        <TextView
            android:id="@+id/resultIrpf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/irpf"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deducciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/irpf"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/rounded_corners"
        >
        <TextView
            android:id="@+id/posiblesDeduc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/posibles_deducciones"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>